--- a/style.css
+++ b/style.css
@@ -7,30 +7,29 @@
     margin: 0;
 }
 
-body {
+main {
     display: flex;
-    flex-direction: row;
+    height: 100vh;
+    flex-wrap: wrap;
     /*position: relative;*/
 }
 
 .leftground {
-    /*height:1vh;*/
+    flex: 1;
+    background: url('./images/shane-rounce-unsplash.jpg') no-repeat center;
+    background-size: cover;
     position: relative;
-    width: 70%;
-    margin-left: -5vw;
-    margin-top: -5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
 }
 
 .rightground {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    padding-left: 0;
-    margin: 0;
-}
-
-.rightground > * {
-    flex-grow: 1;
+    flex-grow: 0.5;
 }
 
 .header {
@@ -43,32 +42,34 @@ body {
 
 .forms-container {
     display: flex;
-    box-shadow: 5px 10px #e5e7eb;
+    flex-grow: 1;
+    align-items: center;
+    /*box-shadow: 5px 10px #e5e7eb;*/
 }
 
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 24px;
-}
-
-.hands-on-log {
-    /*position: absolute;*/
-    width:100%;
+    flex-grow: 1;
+    /*padding-top: 24px;*/
 }
 
 .logo-container {
-    background-color: whitesmoke;
+    position: absolute;
+    background-color: rgba(200, 232, 194, 0.5);
     border-color: black;
-    width:100%;
-    height:100%;
+    z-index: o;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 40%;
+    top:100px;
 }
 
 .logo {
-    position: absolute;
-    top: 100px;
-    right: 180px;
-    width: 40%;
+    /*position: absolute;
+    top: 10px;
+    right: 120px;
+    width: 40%;/
 }
-
