--- a/style.css
+++ b/style.css
@@ -44,9 +44,11 @@ main {
     display: flex;
     flex-grow: 1;
     align-items: center;
-    box-shadow: 5px 10px #e5e7eb;
+    /*box-shadow: 5px 10px #e5e7eb;*/
+    background-color: rgba(200, 232, 194, 0.5);
     flex-wrap: wrap;
     flex-direction: column;
+    justify-content: center;
     gap: 1em;
 }
 
@@ -90,9 +92,10 @@ main {
     color: white;
 }
 
-/*.logo {
-    position: absolute;
-    top: 10px;
-    right: 120px;
-    width: 40%;
-}*/
+input:invalid {
+    border-color: red;
+}
+
+input:valid {
+    border-color: green;
+}
